fixed some bugs

--- a/package.json
+++ b/package.json
@@ -20,5 +20,7 @@
     "async": "^2.6.0",
     "lodash": "^4.17.5",
     "q": "^1.5.1",
-    "random-seed": "^0.3.0"}
+    "random-seed": "^0.3.0",
+    "thaw.js": "^2.0.0"
+  }
 }
